chore: add release note for 1.18.3